# fercl

./: Makefile.am  README  configure.ac
m4/: gnulib-cache.m4
src/: fercl.c
